provarAnt/00D180000008cIAEAY/objects/APXTConga4__Conga_Template__c.object
<CustomObject>
    <description>Template manager for use with Conga Composer and Conga Mail Merge.</description>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Label_Template_Use_Detail_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Conga Mail Merge Label Templates Only.  This setting indicates to use ReportData (or QueryData) as the data source for Labels</inlineHelpText>
        <label>Label Template: Use Detail Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_1__c</fullName>
        <description>You may update a field on the master record. The update occurs when the user Logs Activity, either from PointMerge or Mass Merge. 

Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

For example: 
Status__c=Completed 

A special case: 
Status_Date__c=Today</description>
        <inlineHelpText>Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

Examples: 
Status__c=Completed 
Status_Date__c=Today 
Stage__c=In Progress</inlineHelpText>
        <label>Master Field to Set 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_2__c</fullName>
        <label>Master Field to Set 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Master_Field_to_Set_3__c</fullName>
        <label>Master Field to Set 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Template_Group__c</fullName>
        <inlineHelpText>Identify the group name to which this template belongs. Used in conjunction with the &quot;&amp;TemplateGroup=&quot; parameter in PointMerge.</inlineHelpText>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Template_Type__c</fullName>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Conga Template</label>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>APXTConga4__Template_Group__c</columns>
        <columns>APXTConga4__Template_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMT-{00000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>